syntax = "proto3";

package response;

option go_package = "chapter7/rpc/response";

import "rpc/domain/field.proto";
import "google/protobuf/timestamp.proto";

message User {
  optional int64 ID = 1;
  optional string HashID = 2;
  optional string Mobile = 3;
  optional int64 Age = 4;
  optional int64 Level = 5;
  optional string LevelDesc = 6;
  optional string Nickname = 7;
  optional string Avatar = 8;
  optional string Bio = 9;
  optional double Amount = 10;
  optional google.protobuf.Timestamp CreateTime = 11;
}

message UserOne {
  User User = 1;
}

message UserMany {
  repeated User List = 1;
}

message UserLogin {
  User User = 1;
}

message UserSmsRegister  {
  User User = 1;
}

message UserRegister {
  User User = 1;
}

message UserModify {
}

message UserCash {
}